feat: add sessions crud
